Fix header alignment on frontpage

--- a/app/routes/overview/components/CompactEvents.css
+++ b/app/routes/overview/components/CompactEvents.css
@@ -16,6 +16,10 @@
   .compactLeft h3 {
     margin-top: 0;
   }
+
+  .compactRight h3 {
+    margin-top: 0;
+  }
 }
 
 .compactLeft,
